@@ -1,7 +1,0 @@
-class NotFoundError extends Error {
-  constructor(message) {
-    super(message);
-  }
-}
-
-module.exports = NotFoundError;
