@@ -1,0 +1,5 @@
+export default class NotFoundError extends Error {
+  constructor(message: string) {
+    super(message);
+  }
+}
